# SkyPro_YD_CW3

./: .coverage  .gitignore  pyproject.toml
src/: coverage_report.txt  main.py  ops_5_printout.py  trans_class.py  utils.py
tests/: .coverage  coverage_report.txt  test_operations.json  test_utils.py
